[package]
name = "janitor"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "janitor"

[dependencies]
chrono = "0.4.26"
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
is-root = "0.1.3"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.tokio]
version = "1.31.0"
features = ["macros", "process", "rt-multi-thread", "tracing"]

[dev-dependencies]
proptest = "1.2.0"
rstest = "0.18.2"
