[package]
name = "janitor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]

[[bin]]
name = "janitor"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
futures = "0.3.30"
is-root = "0.1.3"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "process", "rt-multi-thread", "tracing"]

[dev-dependencies]
proptest = "1.3.1"
rstest = "0.18.2"
